@@ -16,6 +16,7 @@ Changed
  - SPARQL expression parsing could occassionally reject some numeric literals incorrectly (CORE-332)
  - GROUP BY could interact incorrectly with some operators such as VALUES and GRAPH resulting in incorrect results (CORE-336)
  - GRAPH ?g { } was interpreted incorrectly (CORE-336)
+ - Fixed a bug where asynchronous UpdateGraph() on Sesame connections would invoke the callback too early
 - Dependencies
  - Upgrade VDS.Common to 1.2.0 which resolves an issue that users may encounter under the VS debugger (CORE-317, CORE-292)
 - Documentation
